--- a/oss-pkg-info.yaml
+++ b/oss-pkg-info.yaml
@@ -1,4 +1,4 @@
-pen Source Software Package:
+Open Source Software Package:
 - name: webOSOSE-ilib-webapp
   version: 14.6.0
   source: https://github.com/webosose/ilib-webapp
